--- a/pokeidler/style.css
+++ b/pokeidler/style.css
@@ -94,21 +94,37 @@ input {
 
 .btn {
     border-radius: 16px;
-    padding: 0 10px;
+    padding: 0 8px;
+    margin: 4px;
+    border-bottom: 2px solid #1111BB !important; 
 }
 
-.dropdown.btn-primary {
+.btn:hover{
+    margin-top: 6px;
+    border-bottom: 0 !important;
+}
+
+.DropdownButton {
     display: inline-block;
-    border-radius: 4px;
+    position: relative;
+    margin: 0;
     padding: 0;
 }
 
-.dropdown.btn-primary button {
-    color: white !important;
-    padding: 0 16px 0 4px;
+.DropdownButton .btn {
+    padding: 0 20px 0 8px;
+    border-bottom: 2px solid #1111BB !important;
 }
 
-.dropdown.btn-primary ::after{
+.DropdownButton .btn:hover ::after {
+    transform: translate(-12px, 2px);
+}
+
+.DropdownButton ::after {
+    transform: translate(-12px);
+}
+
+.DropdownButton.dropdown.btn-primary ::after{
     margin-right: 4px;
 }
 
@@ -181,9 +197,14 @@ input {
     background-color: #FFFFFFAA;
     box-sizing: content-box;
     padding: 0;
-    width: 200px;
-    max-width: 200px;
-    min-width: 200px;
+    width: 220px;
+    max-width: 250px;
+    min-width: 250px;
+}
+
+.PokemonView p{
+    font-size: 16px;
+    color: black;
 }
 
 .PokemonView img{
@@ -194,7 +215,7 @@ input {
 .PokemonView .card-body{
     padding: 0 10px 10px 10px;
  }
- 
+
 .PokemonView ::-webkit-scrollbar {
     width: 4px;
 }
@@ -220,12 +241,6 @@ input {
     font-size: 32px;
     text-align: center;
     margin: 0;
-}
-
-.PokemonView .tab {
-    padding: 0 5px;
-    margin: 0 2px;
-    border: 0;
 }
 
 .PokemonView .scroll-list {
@@ -318,7 +333,7 @@ input {
     font-size: 32px;
     padding: 8px 8px 8px 32px;
     margin: 16px auto 16px 16px;
-    background-color: #FFFFFF77;
+    background-color: #FFFFFFAA;
 }
 
 .AllSpritesView button{
@@ -333,6 +348,31 @@ input {
 
 .MapHoverViewWrapper{
     position: relative;
+}
+
+.RegionMapView .title {
+    background-color: #FFFFFFAA;
+    margin-top: 24px;
+    margin-bottom: 16px;
+    border-radius: 16px;
+    padding: 0 16px;
+}
+
+.RegionMapView .title .btn {
+    float: right;
+    margin-top: 16px;
+}
+
+.RegionMapView .title .DropdownButton {
+    float: right;
+}
+
+.RegionMapView h3 {
+    display:inline-block;
+}
+
+.MapView .DropdownButton .btn{
+    width: 100px;
 }
 
 .MapHoverView {
@@ -352,7 +392,7 @@ input {
 
 .EncounterView {
     position: relative;
-    background-color: #FFFFFF77;
+    background-color: #FFFFFFAA;
     padding: 0px 0px;
     border-radius: 16px;
     margin: 8px;
@@ -383,7 +423,7 @@ input {
 }
 
 .QuestView {
-    background-color: #FFFFFF77;
+    background-color: #FFFFFFAA;
     padding: 0px 0px;
     border-radius: 16px;
     margin: 8px;
@@ -398,9 +438,11 @@ input {
     color: black;
     font-size: 20px;
 }
+
 .PokemonChoiceButton img{
     border-radius: 1000px;
 }
+
 .PokemonChoiceButton :hover {
     background-color: #FFFFFFAA;
 }
