--- a/pokeidler/style.css
+++ b/pokeidler/style.css
@@ -416,10 +416,23 @@ button:focus {
 }
 
 .PokemonView .pokemon-secondary .flavor-text{
+    max-width: 100%;
     height: 150px;
     max-height: 150px;
     min-height: 150px;
+    padding: 0;
     overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.PokemonView .pokemon-secondary .item-description{
+    max-width: 100%;
+    height: 138px;
+    max-height: 138px;
+    min-height: 138px;
+    padding: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .PokemonView p{
