--- a/pokeidler/style.css
+++ b/pokeidler/style.css
@@ -853,6 +853,53 @@ canvas {
     position: absolute;
 }
 
+.ItemsTab .item-block {
+    width: 300px;
+    height: 300px;
+    
+    margin: 16px;
+    padding: 32px 16px;
+
+    background-color: rgba(255, 255, 255, 0.534);
+
+    border-radius: 32px;
+}
+
+.ItemsTab .item-block {
+    display: inline-block;
+    margin: 16px;
+    padding: 8px 24px 8px 24px;
+    color: black;
+}
+
+.ItemsTab .item-block .title {
+    height: 60px;
+}
+
+.ItemsTab .item-block .title .name {
+    color: black;
+    font-size: 38px;
+    float: left;
+    padding: auto;
+    /* background-color: red; */
+    width: 192px;
+    text-align: center;
+}
+
+.ItemsTab .item-block .title img {
+    height: 60px;
+    min-height: 60px;
+    float: left;
+} 
+
+.ItemsTab .item-block .description{
+    text-align: center;
+    width: 100%;
+    height: 166px;
+    overflow-y: scroll;
+} 
+
+
 .InfoTab h3{
     background-color: #00000077;
     padding-left: 24px;
