--- a/concept/index.css
+++ b/concept/index.css
@@ -14,13 +14,6 @@ body {
     /* overflow: hidden; */
 }
 
-@media (pointer:none),
-(pointer:coarse) {
-    body {
-        height: 4000px;
-    }
-}
-
 h1 {
     position: relative;
     font-size: 16px;
@@ -94,7 +87,19 @@ hr {
     display: inline;
 }
 
-#buttons {
+#buttonsHorizontal {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+    height: 280px;
+    cursor: grab;
+    z-index: 0;
+    color: #8b2e2ea9;
+    overflow-y: scroll;
+}
+
+#buttonsVertical {
     position: fixed;
     right: 0;
     width: 280px;
